<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.ivanfranchin</groupId>
    <artifactId>springboot-aws-localstack-dynamodb-lambda-sns-sqs</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>
    <name>springboot-aws-localstack-dynamodb-lambda-sns-sqs</name>
    <description>Demo project for Spring Boot</description>

    <properties>
        <java.version>17</java.version>
        <amazon-awssdk.version>2.25.0</amazon-awssdk.version>
        <spring-cloud-aws.version>3.0.0</spring-cloud-aws.version>
        <jib-maven-plugin.version>3.4.1</jib-maven-plugin.version>
        <docker-image.prefix>ivanfranchin</docker-image.prefix>
    </properties>

    <modules>
        <module>news-producer</module>
        <module>news-consumer</module>
        <module>dynamodb-lambda-function</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <!-- To choose the AWS SDK version -->
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${amazon-awssdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.awspring.cloud</groupId>
                <artifactId>spring-cloud-aws-dependencies</artifactId>
                <version>${spring-cloud-aws.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>com.google.cloud.tools</groupId>
                <artifactId>jib-maven-plugin</artifactId>
                <version>${jib-maven-plugin.version}</version>
                <configuration>
                    <to>
                        <image>${docker-image.prefix}/${project.artifactId}:${project.version}</image>
                    </to>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
